# erleah-v2-backend-prototype

./: .clinerules  .env.example  .gitignore  CLAUDE.md  DEMO_GUIDE.md  Dockerfile  GETTING_STARTED.md  Makefile  README.md  aditus_emb.json  docker-compose.yml  pyproject.toml  pyrightconfig.json  setup.sh  valid_companies.txt  valid_sessions.txt  valid_speakers.txt  wizard_emb.json
.github/workflows/: ci.yml
alerts/: rules.yaml
config/: facets.yaml  grafana-dashboard.json
demo/: index.html
dev-docs/devtools/: ARCHITECTURE.md  PHASE_1_PIPELINE_VISIBILITY.md  PHASE_2_PROMPT_EDITOR.md  PHASE_3_MODEL_SELECTOR.md  PHASE_4_RUN_COMPARISON.md  PHASE_5_DEBUG_MODE.md
dev-docs/mini-assistant/: API_CONTRACT.md  DEVELOPER_CHECKLIST.md  DEVELOPER_GUIDE.md  FACET_DEFINITIONS.md  MINI_ASSISTANT_ROADMAP.md  REFLECTION_TASK-R1_STATE_AND_CONFIG.md  REFLECTION_TASK-R2_REFLECT_AND_REPLAN.md  REFLECTION_TASK-R3_THINKING_EVENTS.md  REFLECTION_TASK-R4_GRAPH_WIRING.md  REFLECTION_TASK-R5_EVALUATE_FEEDBACK.md  REFLECTION_TASK_INDEX.md
dev-docs/mini-assistant-phase-2/: TASK-01_GRACEFUL_FAILURE.md  TASK-02_DIRECTUS_STREAMING_FALLBACK.md  TASK-03_CONVERSATION_CONTEXT.md  TASK-04_DIRECTUS_QDRANT_INTEGRATION.md  TASK-05_PRODUCTION_HARDENING.md  TASK-06_CACHING_LAYERS.md  TASK_INDEX.md
dev-docs/mini-assistant-phase-3/: P3-01_TOOL_FRAMEWORK.md  P3-02_REGISTRATION_LOOKUP.md  P3-03_EMAIL_SERVICE.md  P3-04_SECURITY_AND_AUDIT.md  PHASE_3_INDEX.md
devtools/: index.html  package-lock.json  package.json  vite.config.js
devtools/src/: App.svelte  app.css
grafana/dashboards/: llm-costs.json  search-quality.json  system-health.json
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
scripts/: demo.sh  dev.sh  ground_truth_exhibitors.json  ground_truth_faq.json  ground_truth_sessions.json  ground_truth_speakers.json  ingest_faceted.py  ingest_mock.py  ingest_production.py  load_test.py  log_viewer.py  seed_data.py  test_acknowledgment.py  verify_stability.py
src/: config.py  main.py
src/agent/: graph.py  llm.py  llm_registry.py  prompt_registry.py  prompts.py  state.py
src/api/: debug.py
src/middleware/: logging.py  metrics.py
src/models/: api.py
src/monitoring/: metrics.py  sentry.py  tracing.py
src/search/: facet_config.py  faceted.py
src/services/: cache.py  directus.py  directus_streaming.py  errors.py  (+7 more)
tests/: locustfile.py  test_cache.py  test_directus_streaming.py  test_error_wrapper.py  test_errors.py  test_nodes.py  test_rate_limiter.py  test_resilience.py  test_search.py  test_tools.py
(+27 files in other folders)
